--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/WandersonBarbosa/API-Node-mysql#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
     "sequelize": "^4.33.1"
